<resources>
    <string name="app_name">My Inventory App</string>
    <string name="logo">Inventory logo</string>
    <string name="newRegistration">New Registration</string>
    <string name="endUser">Enter Name</string>
    <string name="phoneNumber">Enter Phone Number</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
    <string name="login">login</string>
    <string name="signin">Sign In</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="description">Description</string>
    <string name="quantity">Quantity</string>
    <string name="itemName">Item Name</string>
    <string name="ItemList">Item</string>
    <string name="add">Add</string>
    <string name="smsDescritpion">SMS Notifications</string>
    <string name="smsNotifications">SMS Notifications</string>
    <string name="addButton">Add</string>
    <string name="smsButton">"SMS "</string>
    <string name="user">User Email: %s</string>
    <string name="delete">Delete</string>
    <string name="totalItems">Total Items</string>
    <string name="reset_Password">Reset Password</string>
    <string name="emailReset">Email Address</string>
    <string name="sendEmailButton">Send Email</string>
    <string name="cancelButton">Cancel</string>
</resources>