<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_items"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ListGridView">

    <LinearLayout
        android:id="@+id/headerLinearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/itemDescription"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingStart="5pt"
            android:paddingEnd="5pt"
            android:text="@string/description"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/quantity"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:text="@string/quantity"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/itemName"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:text="@string/itemName"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </LinearLayout>

    <ListView
        android:id="@+id/list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="2dp"
        android:contentDescription="@string/ItemList"
        app:layout_constraintBottom_toTopOf="@+id/footer1LinearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerLinearLayout"
        app:layout_constraintVertical_bias="1.0">

    </ListView>

    <LinearLayout
        android:id="@+id/footer1LinearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/addItemButton"
            android:layout_width="56dp"
            android:layout_height="48dp"
            android:background="@color/white"
            android:contentDescription="@string/add"
            app:srcCompat="@drawable/addNewItem" />

        <ImageButton
            android:id="@+id/smsNotification"
            android:layout_width="56dp"
            android:layout_height="48dp"
            android:background="@color/white"
            android:contentDescription="@string/smsNotifications"
            app:srcCompat="@drawable/smsNotifications" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/deleteButton"
            android:layout_width="56dp"
            android:layout_height="48dp"
            android:background="@color/white"
            android:contentDescription="@string/delete"
            app:srcCompat="@drawable/delete" />

        <TextView
            android:id="@+id/textViewTotalItemsCount"
            android:layout_width="56dp"
            android:layout_height="48dp"
            android:background="@color/white"
            android:gravity="center_horizontal|center_vertical"
            android:textColor="@color/white"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textViewAddButton"
            android:layout_width="56dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/addButton"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textViewSmsButton"
            android:layout_width="56dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/smsButton"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/endUserEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:hint="@string/user"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/deleteItem"
            android:layout_width="56dp"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/totalQuantity"
            android:layout_width="57dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/totalItems"
            android:textColor="@color/white"
            android:textSize="17sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
