<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/popup_element"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/resetPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/reset_Password"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="38sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/emailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/resetPasswordTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:gravity="center_horizontal"
        android:hint="@string/emailReset"
        android:inputType="textEmailAddress"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailAddress"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="68dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/resetEmail"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/sendEmailButton"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:backgroundTint="@android:color/holo_blue_dark" />

        <Button
            android:id="@+id/cancelButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/cancelButton"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:backgroundTint="@android:color/holo_blue_dark" />

    </LinearLayout>

</RelativeLayout>